CLI and wip UI
